Project

General

Profile

Bug #57244

[WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago

Added by Xiubo Li over 1 year ago. Updated 9 days ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Administration/Usability
Target version:
% Done:

100%

Source:
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client, MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

This is from cu case and there is no more debug logs. It's so strange that the MDS is waiting for the revoking response from client but the pending caps equals to the issued caps. In theory the cap should be remove from the revoke_caps list, but it didn't.

cap_id assert.jpg View (51.3 KB) wei qiaomiao, 06/27/2023 12:14 PM


Subtasks

Bug #49434: `client isn't responding to mclientcaps(revoke)` for hoursDuplicate


Related issues

Related to CephFS - Bug #63710: client.5394 isn't responding to mclientcaps(revoke), ino 0x10000000001 pending pAsLsXs issued pAsLsXsFs, sent 30723.964282 seconds ago Duplicate
Copied to CephFS - Backport #61165: reef: [WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago Resolved
Copied to CephFS - Backport #61166: pacific: [WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago Resolved
Copied to CephFS - Backport #61167: quincy: [WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago Resolved

History

#1 Updated by Xiubo Li over 1 year ago

  • Target version set to v18.0.0

#2 Updated by Xiubo Li over 1 year ago

  • Pull request ID set to 47752

#3 Updated by Xiubo Li over 1 year ago

  • Status changed from In Progress to Fix Under Review

#4 Updated by Xiubo Li about 1 year ago

Usually this is a false alarm by default. But if the mds_cap_revoke_eviction_timeout is enabled the corresponding clients will be evicted after the timeout.

#5 Updated by Xiubo Li about 1 year ago

As a workaround to dismiss the warnings please disable mds_cap_revoke_eviction_timeout and restart or failover the MDSs. Or if possible you also just could remove the corresponding files or directories instead of restart and failover the MDSs.

#6 Updated by Venky Shankar 11 months ago

  • Category set to Administration/Usability
  • Status changed from Fix Under Review to Pending Backport
  • Target version changed from v18.0.0 to v19.0.0
  • Backport changed from quincy,pacific to reef,quincy,pacific

#7 Updated by Backport Bot 11 months ago

  • Copied to Backport #61165: reef: [WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago added

#8 Updated by Backport Bot 11 months ago

  • Copied to Backport #61166: pacific: [WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago added

#9 Updated by Backport Bot 11 months ago

  • Copied to Backport #61167: quincy: [WRN] : client.408214273 isn't responding to mclientcaps(revoke), ino 0x10000000003 pending pAsLsXsFs issued pAsLsXsFs, sent 62.303702 seconds ago added

#10 Updated by Backport Bot 11 months ago

  • Tags set to backport_processed

#11 Updated by Venky Shankar 10 months ago

  • Status changed from Pending Backport to Fix Under Review
  • Pull request ID changed from 47752 to 51500

#13 Updated by Venky Shankar 9 months ago

  • Status changed from Fix Under Review to Pending Backport

#14 Updated by wei qiaomiao 9 months ago

#15 Updated by Xiubo Li 4 months ago

  • Status changed from Pending Backport to Resolved

#16 Updated by Venky Shankar 4 months ago

  • Related to Bug #63710: client.5394 isn't responding to mclientcaps(revoke), ino 0x10000000001 pending pAsLsXs issued pAsLsXsFs, sent 30723.964282 seconds ago added

Also available in: Atom PDF